--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		    	Section2 content
 		  	</div>
 			<footer class="panel-footer">
-				Section2 footer
+				<a href="http://pl.wikipedia.org/wiki/System_kontroli_wersji">Wikipedia</a>
 			</footer>
 		</section>
 		<footer  class="navbar">
